2016-03-11  Araki Ken  <arakiken@users.sf.net>

	* README.ja, man/mlterm.1: Updated.

	* ml_vt100_parser.c, x_main_config.c: "use_approximate_vt_color" is changed
	  to "vt_color_mode"

	* ml_color.c:
	  - 'threshold' is added to arguments of ml_get_closest_256_colors().
	  - ml_set_use_approximate_vt_color() -> ml_set_color_mode()

2016-03-11  Araki Ken  <arakiken@users.sf.net>

	* x_main_config.c: "use_approximate_vt_color" option is added.

	* fb/x_display.c: The performance of x_cmap_get_closest_color() is improved
	  by using ml_get_closest_256_color().

	* ml_color.c:
	  - ml_set_use_approximate_vt_color() is added.
	  - ml_get_closest_256_color() is added.
	  - The performance of ml_get_closest_color() is improved by using
	    ml_get_closest_256_color().

	* ml_vt100_parser.c:
	  - Whether ps is -1 or not is checked before calling ml_get_closest_color().
	  - "use_approximate_vt_color" is added to OSC 5379.

	* c_imagelib.c, fb/x_display.c, ml_color.c:
	  The variable type of holding distance of colors in searching
	  approximate color is changed from u_long to u_int.

2016-03-06  Araki Ken  <arakiken@users.sf.net>

	* x_color_cache.[ch]:
	  x_color_cache_256_t -> xc_olor_cache_256ext_t which contains extended colors.

	* x_color.h: The type of pixel is changed from u_long to u_int32_t in x_color_t.

	* ml_color.[ch]:
	  - 0x100-0x1ef is used to allocate 24bit colors. (Named as "extended colors")
	  - 0x100-0x106 (ML_FG_COLOR-ML_CROSSED_OUT_COLOR) is moved to 0x1f0-0x1f6.
	  - MAX_256_COLORS, MAX_EXT_COLORS, MAX_256EXT_COLORS, IS_EXT_COLOR(),
	    IS_256EXT_COLOR(), EXT_COLOR_TO_INDEX(), INDEX_TO_EXT_COLORS(),
	    COLOR_DISTANCE() and COLOR_DISTANCE_THRESHOLD macros are added.
	  - ml_ext_color_is_changed() is added.
	  - ml_get_closest_color() and ml_get_color_rgba() consider extended colors.
	  - IS_VALID_COLOR_EXCEPT_FG_BG() is renamed to IS_VALID_COLOR_EXCEPT_SPECIAL_COLORS().

	* kik_map.h:
	  - The number of searching is decreased.